# TopologyTransferTool

./: .gitignore  CMakeLists.txt  README.md  pseudoCode.cpp
classDiagram/: classDiagram.puml
class_diagram/: class_diagram.puml
include/: Convert.h  NGLScene.h  WindowParams.h  curve.h  mesh.h  meshUtility.h  output.h
shaders/: ColourFragment.glsl  ColourVertex.glsl  TextureFragment.glsl  TextureVertex.glsl
src/: Convert.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  curve.cpp  main.cpp  mesh.cpp  meshUtility.cpp  output.cpp
test_files/: sphere_curve.fbx
tests/: ConvertTests.cpp  curveTests.cpp  meshTests.cpp  meshUtilityTests.cpp  outputTests.cpp
